--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
+    "monocle-ts": "^1.3.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "rxjs": "^6.2.1"
