--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
     "babel-loader": "^8.0.2",
+    "copy-webpack-plugin": "^4.5.4",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.14.3",
     "ts-loader": "^5.1.1",
