--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "monocle-ts": "^1.3.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "rxjs": "^6.2.1"
+    "rxjs": "^6.2.1",
+    "soundbank-reverb": "^1.1.2"
   }
 }
